--- a/dashboard/templates/top.html
+++ b/dashboard/templates/top.html
@@ -6,8 +6,11 @@
       <th>ESXi Node</th>
       <th>VM ID</th>
       <th>Name</th>
-      <th>Guest OS</th>
       <th>IP Address</th>
+      <th>Uptime</th>
+      <th>CPU</th>
+      <th>RAM</th>
+      <th>Storage</th>
       <th>Comment</th>
     </tr>
   </thead>
@@ -26,8 +29,24 @@
       <td>{{ machine.esxi_node_name }}</td>
       <td>{{ machine.id }}</a></td>
       <td><a href="/machine/{{ machine.esxi_node_name }}/{{ machine.id }}">{{ machine.name }}</a></td>
-      <td>{{ machine.guest_os }}</td>
-      <td>{{ machine.ip_address }}</td>
+      <td>
+        {% if machine.ip_address %}
+        {{ machine.ip_address }}
+        {% else %}
+        -
+        {% endif %}
+      <td>
+        {% if machine.uptime_seconds is none %}
+        -
+        {% else %}
+        {{ machine.uptime_seconds // 86400 }}d
+        {{ machine.uptime_seconds % 86400 // 3600}}h
+        {{ machine.uptime_seconds % 86400 % 3600 // 60 }}m
+        {% endif %}
+      </td>
+      <td>{{ machine.num_cpu }} [Core]</td>
+      <td>{{ machine.memory_size_mb // 1000 }} [GB]</td>
+      <td>{{ machine.storage_commited // (1000 ** 3) }} [GB]</td>
       <td>{{ machine.comment }}</td>
     </tr>
     {% endfor %}
