--- a/dashboard/templates/_header.html
+++ b/dashboard/templates/_header.html
@@ -8,18 +8,14 @@
 </head>
 
 <body>
-  <div class="container" style="max-width: 1800px; margin-top: 20px; margin-bottom: 20px;">
-    <header class="navbar" style="padding-bottom: 1rem; padding-top: 1rem;">
+  <div class="container">
+    <header class=" navbar" style="padding-bottom: 1rem; padding-top: 1rem;">
       <section class="navbar-section">
         <a href="#" class="navbar-brand mr-2" style="font-weight: bold;">ECoMan</a>
         <a href="/" class="btn btn-link">VM List</a>
         <a href="/create" class="btn btn-link">Create VM</a>
       </section>
       <section class="navbar-section">
-        {% if email %}
-        <span>{{ email }} としてログイン中</span>
-        {% else %}
-        <span>Anonymous としてログイン中</span>
-        {% endif %}
+        <span>Logined as <i>Guest</i></span>
       </section>
     </header>
