renamed menu items

--- a/dashboard/templates/_header.html
+++ b/dashboard/templates/_header.html
@@ -12,8 +12,8 @@
     <header class=" navbar" style="padding-bottom: 1rem; padding-top: 1rem;">
       <section class="navbar-section">
         <a href="#" class="navbar-brand mr-2" style="font-weight: bold;">ECoMan</a>
-        <a href="/" class="btn btn-link">VM List</a>
-        <a href="/create" class="btn btn-link">Create VM</a>
+        <a href="/" class="btn btn-link">Machine List</a>
+        <a href="/create" class="btn btn-link">Create Machine</a>
       </section>
       <section class="navbar-section">
         <span>Logined as <i>Guest</i></span>
