fix esxi-console link

--- a/dashboard/templates/detail.html
+++ b/dashboard/templates/detail.html
@@ -3,7 +3,7 @@
 <main>
   <section>
     <fieldset>
-      <a href="https://{{ machine.esxi_node_address }}/ui/#/host/vms/{{ machine.id }}">
+      <a href="https://{{ machine.esxi_node_address }}/ui/#/host/vms/{{ machine.id }}" target="_blank">
         <button class="btn btn-primary">ESXi Console</button>
       </a>
     </fieldset>
