--- a/dashboard/templates/create.html
+++ b/dashboard/templates/create.html
@@ -16,7 +16,7 @@
 
   <div class="form-group">
     <div class="col-3 col-sm-12">
-      <label class="form-label" for="name">VM Name</label>
+      <label class="form-label" for="name">Name</label>
     </div>
     <div class="col-9 col-sm-12">
       <input class="form-input" type="text" id="name" placeholder="koyama-http">
@@ -25,7 +25,7 @@
 
   <div class="form-group">
     <div class="col-3 col-sm-12">
-      <label class="form-label" for="cpu">VM Num of CPU</label>
+      <label class="form-label" for="cpu">Num of CPU</label>
     </div>
     <div class="col-9 col-sm-12">
       <input class="form-input" type="number" id="cpu" placeholder="1" min="1" max="4" value="1">
@@ -34,7 +34,7 @@
 
   <div class="form-group">
     <div class="col-3 col-sm-12">
-      <label class="form-label" for="ram">VM Memory Size</label>
+      <label class="form-label" for="ram">Memory Size</label>
     </div>
     <div class="col-9 col-sm-12">
       <select id="ram" class="form-select">
@@ -48,7 +48,7 @@
 
   <div class="form-group">
     <div class="col-3 col-sm-12">
-      <label class="form-label" for="storage">VM Storage Size</label>
+      <label class="form-label" for="storage">Storage Size</label>
     </div>
     <div class="col-9 col-sm-12">
       <select id="storage" class="form-select">
@@ -62,12 +62,11 @@
 
   <div class="form-group">
     <div class="col-3 col-sm-12">
-      <label class="form-label" for="network">VM Network</label>
+      <label class="form-label" for="network">Network</label>
     </div>
     <div class="col-9 col-sm-12">
       <select id="network" class="form-select">
         <option value='private'>Private</option>
-        <option value='DMZ-Network' disabled>DMZ</option>
       </select>
     </div>
   </div>
@@ -78,18 +77,10 @@
     </div>
     <div class="col-9 col-sm-12">
       <select id="esxi_node" class="form-select">
-        <option value="jasmine">Jasmine</option>
-        <option value="mint">Mint</option>
+        {% for nodename in esxi_nodes %}
+        <option value="{{ nodename }}">{{ nodename }}</option>
+        {% endfor %}
       </select>
-    </div>
-  </div>
-
-  <div class="form-group">
-    <div class="col-3 col-sm-12">
-      <label class="form-label" for="tags">Tags</label>
-    </div>
-    <div class="col-9 col-sm-12">
-      <input class="form-input" type="text" id="tags" placeholder="koyama, research, experiment">
     </div>
   </div>
 
