--- a/dashboard/templates/_header.html
+++ b/dashboard/templates/_header.html
@@ -12,7 +12,8 @@
     <header class=" navbar" style="padding-bottom: 1rem; padding-top: 1rem;">
       <section class="navbar-section">
         <a href="#" class="navbar-brand mr-2" style="font-weight: bold;">ECoMan</a>
-        <a href="/" class="btn btn-link">Machine List</a>
+        <a href="/" class="btn btn-link">Machines</a>
+        <a href="/nodes" class="btn btn-link">ESXi Nodes</a>
         <a href="/create" class="btn btn-link">Create Machine</a>
       </section>
       <section class="navbar-section">
