fix UI in vm creating

--- a/dashboard/templates/create.html
+++ b/dashboard/templates/create.html
@@ -1,8 +1,6 @@
 {% include "_header.html" %}
 
 <main>
-  <h3>Machine Specs</h3>
-
   <form class="form-horizontal" id="form-container">
     <b>Spec Guide</b>
 
@@ -92,7 +90,7 @@
     <div class="form-group">
       <button type="button" id="commit" class="btn btn-primary">Create</button>
     </div>
-    </div>
+  </form>
 </main>
 <style>
   #form-container {
